# DDS-Auto

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md
cmake/: proto-gen.cmake  (+2 more)
example/boost/Interprocess/: CMakeLists.txt  comp_anonymous_condA.cpp  comp_anonymous_condB.cpp  comp_anonymous_semaphoreA.cpp  comp_anonymous_semaphoreB.cpp  comp_anonymous_upgradable_mutexA.cpp  comp_anonymous_upgradable_mutexB.cpp  comp_doc_anonymous_mutexA.cpp  comp_doc_anonymous_mutexB.cpp  comp_message_queueA.cpp  comp_message_queueB.cpp  doc_adaptive_pool.cpp  doc_allocator.cpp  doc_anonymous_condition_shared_data.h  doc_anonymous_mutex_shared_data.h  doc_anonymous_semaphore_shared_data.h  doc_anonymous_shared_memory.cpp  doc_bufferstream.cpp  doc_cached_adaptive_pool.cpp  doc_complex_map.cpp  doc_cont.cpp  doc_file_mapping.cpp  doc_instrusive.cpp  doc_ipc_message.cpp  doc_managed_aligned_allocation.cpp  doc_managed_allocation_command.cpp  doc_managed_construction_info.cpp  doc_managed_copy_on_write.cpp  doc_managed_external_buffer.cpp  doc_managed_grow.cpp  doc_managed_heap_memory.cpp  doc_managed_mapped_file.cpp  doc_managed_multiple_allocation.cpp  doc_managed_raw_allocation.cpp  doc_map.cpp  doc_move_containers.cpp  doc_multi_index.cpp  doc_named_alloc.cpp  doc_named_mutex.cpp  doc_node_allocator.cpp  (+12 more)
example/boost/Interprocess/test/: get_process_id_name.h
example/boost/asio/: CMakeLists.txt  mem_func_as_handle.cpp  my_session.h  sync_handles_multithreading.cpp  timer_binding_args.cpp  timer_synchronoous.cpp
example/boost/asio/daytime/: Async_tcp_daytime_server.cpp  Async_udp_daytime_client.cpp  Async_udp_daytime_server.cpp  CMakeLists.txt  Combined_tcp_udp_async_server.cpp  Sync_tcp_client_daytime.cpp  Sync_tcp_server_daytime.cpp  Sync_udp_daytime_client.cpp  Sync_udp_daytime_server.cpp  async_client_test.cpp  async_server_test.cpp
example/boost/asio/socket/: CMakeLists.txt  endpoint.cpp  endpoint_main.cpp
example/boost/asio/timer/: sync_handles_multithreading.cpp  timer_asynchronous.cpp
example/boost/concurrent/: CMakeLists.txt  example01_thread.cpp  example02_mutexlock.cpp  example03_uniquelock.cpp  example04_singleton.cpp  example05_condition_variable.cpp  example06_futurepromise.cpp  threadpool.h
example/boost/coroutine2/: CMakeLists.txt  Coroutine_iter.cpp  Data_transmission_to_coroutine.cpp  Data_transmission_to_main.cpp  Fibo_test.cpp  Recursive_descent_parsing.cpp
example/boost/fiber/: CMakeLists.txt  fiber_async_callback.h  fiber_test_01.cpp  fiber_test_main.cpp  perf_test.cpp
example/fastdds/HelloWorldExample/: CMakeLists.txt  HelloWorld.cpp  HelloWorld.cxx  HelloWorld.h  HelloWorldPubSubMain.cxx  HelloWorldPublisher.cxx  HelloWorldPublisher.h  HelloWorldSubscriber.cxx  HelloWorldSubscriber.h  hello_world_main.cppbak
example/fastdds/HelloWorldExampleSharedMem/: CMakeLists.txt  HelloWorld.h  HelloWorld.idl  HelloWorldPubSubMain.cxx  HelloWorldPublisher.cxx  HelloWorldPublisher.h  HelloWorldSubscriber.cxx  HelloWorldSubscriber.h
example/fastdds/ZeroCopyExample/: CMakeLists.txt  LoanableHelloWorld.cxx  LoanableHelloWorldCdrAux.hpp  LoanableHelloWorldPubSubMain.cxx  LoanableHelloWorldPublisher.cxx  LoanableHelloWorldPublisher.h  LoanableHelloWorldSubscriber.cxx  LoanableHelloWorldSubscriber.h
example/unix_network/example/: CMakeLists.txt
example/unix_network/example/fifocliserv/: CMakeLists.txt  mainclient.cpp  mainserver.cpp
example/unix_network/example/lock/: CMakeLists.txt  lockfcntl.h  lockmain.cpp  onedameon.cpp  test2.cpp  test3.cpp
example/unix_network/example/mutex/: CMakeLists.txt  prodcons2.cpp  prodcons3.cpp  prodcons6.cpp
example/unix_network/example/my_pxsem_fifo/: CMakeLists.txt  sem_close.cpp  sem_open.cpp  sem_post.cpp  sem_unlink.cpp  sem_wait.cpp  semaphore.h
example/unix_network/example/my_pxsem_mmap/: CMakeLists.txt  sem_close.cpp  sem_getvalue.cpp  sem_open.cpp  sem_post.cpp  sem_trywait.cpp  sem_unlink.cpp  sem_wait.cpp  semaphore.h
example/unix_network/example/my_pxsem_svsem/: CMakeLists.txt  sem_open.cpp  semaphore.h
example/unix_network/example/pipe/: CMakeLists.txt  client.cpp  client_main.cpp  fduplex.cpp  mainfifo.cpp  mainpipe.cpp  mainpopen.cpp  server.cpp  server_main.cpp
example/unix_network/example/pipemesg/: CMakeLists.txt  client.h  mainfifo.cpp  mesg.h  mesg_recv.cpp  mesg_send.cpp  server.h
example/unix_network/example/pxmsgque/: CMakeLists.txt  mqcreat1.cpp  mqcreate.cpp  mqgetattr.cpp  mqnotifysig1.cpp  mqnotifysig2.cpp  mqnotifysig3.cpp  mqnotifysig4.cpp  mqnotifysig5.cpp  mqnotifythread1.cpp  mqreceive.cpp  mqsend.cpp  mqsysconf.cpp  mqunlink.cpp
example/unix_network/example/pxsem/: CMakeLists.txt  mycat2.cpp  prodcons1.cpp  prodcons2.cpp  prodcons3.cpp  prodcons4.cpp  semcreate.cpp  semgetvalue.cpp  sempost.cpp  semsysconf.cpp  semunlink.cpp  semwait.cpp
example/unix_network/example/pxshm/: CMakeLists.txt  client1.cpp  client2.cpp  cliserv.h  server1.cpp  server2.cpp  shmcreate.cpp  shmread.cpp  shmunlink.cpp  shmwritre.cpp  test3.cpp
example/unix_network/example/rtsignals/: CMakeLists.txt  test1.cpp
example/unix_network/example/shm/: CMakeLists.txt  incr2.cpp  incr3.cpp  incr_dev_zero.cpp  incr_map_anon.cpp  incrl.cpp  test1.cpp  test2.cpp
example/unix_network/example/svipc/: CMakeLists.txt  ftok.cpp
example/unix_network/example/svmsg/: CMakeLists.txt  ctl.cpp  limits.cpp  msgcreate.cpp  msgrcv.cpp  msgrcvid.cpp  msgrmid.cpp  msgsend.cpp  slot.cpp
example/unix_network/example/svmsgcliserv/: CMakeLists.txt  client.h  client_main.cpp  mesg_send.h  message.h  server.h  server_main.cpp
example/unix_network/example/svmsgmpx1q/: CMakeLists.txt  client.h  client_main.cpp  mesg_recv.h  mesg_send.h  server.h
example/unix_network/example/svmsgmpxnq/: CMakeLists.txt  client.h  client_main.cpp  mesg_recv.h  server.h  server_main.cpp  svmsg.h
example/unix_network/lib/: CMakeLists.txt  error.cpp  gf_time.cpp  lock_reg.cpp  lock_test.cpp  px_ipc_name.cpp  readline.cpp  set_concurrency.cpp  signal.cpp  signal_tr.cpp  sleep_us.cpp  wrappthread.cpp  wrapstdio.cpp  wrapunix.cpp
(+188 files in other folders)
