
add_subdirectory(svipc)
add_subdirectory(svmsg)
add_subdirectory(pipe)
add_subdirectory(fifocliserv)
add_subdirectory(pipemesg)
add_subdirectory(pxmsgque)
add_subdirectory(rtsignals)
add_subdirectory(svmsgcliserv)
add_subdirectory(svmsgmpx1q)
add_subdirectory(svmsgmpxnq)
add_subdirectory(mutex)
add_subdirectory(lock)
add_subdirectory(pxsem)
add_subdirectory(my_pxsem_fifo)
add_subdirectory(my_pxsem_mmap)
add_subdirectory(my_pxsem_svsem)