set(Asio_Socket_LIBS ${Boost_LIBRARIES} boost_thread boost_coroutine boost_context CACHE INTERNAL "")

add_subdirectory(endpoint)
add_subdirectory(iooperation)
add_subdirectory(SyncClient)
add_subdirectory(SyncServer)
add_subdirectory(AsyncServer01)
add_subdirectory(AsyncServer02)
add_subdirectory(AsyncServer03)
add_subdirectory(AsyncServer04)
add_subdirectory(ProtobufServer/Message)
add_subdirectory(ProtobufServer/AsyncServer)
add_subdirectory(ProtobufServer/SyncClient)
add_subdirectory(MsgJsonIDServer)
add_subdirectory(LogicServer)
add_subdirectory(IoContextPoolServer)
add_subdirectory(ThreadPoolServer)
add_subdirectory(CoroutineServer)